--- a/src/index.scss
+++ b/src/index.scss
@@ -24,3 +24,10 @@ body {
   font-family: 'SanomatGrabApp';
   line-height: 1.42857143;
 }
+
+button {
+  font-family: 'SanomatGrabApp';
+  padding: 0;
+  background: none;
+  border: none;
+}
